<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment_name_surname_title_text"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/set_name_dialog_fragment_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_fragment_name_surname_name_hint_text"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/white"
        android:textSize="16sp"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        />

    <EditText
        android:id="@+id/set_surname_dialog_fragment_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_fragment_surname_hint_text"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/white"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        />

    <Button
        android:id="@+id/dialog_fragment_name_surname_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment_name_surname_save_button_text"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:background="@drawable/circle_button_ripple"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>