<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    tools:context=".SecondFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:weightSum="2"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="20dp"
                android:elevation="4dp"
                >

                <TextView
                    android:id="@+id/fragment_second_timer_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_fragment_initial_timer_text"
                    android:textColor="@color/white"
                    android:textSize="70sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="15dp"
                    android:background="@color/center_gradient_color"
                    />


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/fragment_second_greetings_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:visibility="gone"
                android:gravity="center"
                android:layout_marginHorizontal="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fireworks"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/second_fragment_greeting_text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginHorizontal="10dp"
                    />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fireworks"
                    />

            </LinearLayout>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/fragment_second_start_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="40dp"
                        android:text="@string/second_fragment_start_button_text"
                        android:textColor="@color/white"
                        android:elevation="2dp"
                        android:background="@drawable/circle_button_ripple"
                        />

                    <Button
                        android:id="@+id/fragment_second_pause_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="40dp"
                        android:text="@string/second_fragment_pause_button_text"
                        android:visibility="invisible"
                        android:textColor="@color/white"
                        android:elevation="2dp"
                        android:background="@drawable/circle_stop_button_ripple"
                        />

                    <Button
                        android:id="@+id/fragment_second_resume_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="40dp"
                        android:text="@string/second_fragment_resume_button_text"
                        android:textColor="@color/white"
                        android:elevation="2dp"
                        android:visibility="invisible"
                        android:background="@drawable/circle_button_ripple"
                        />

                </FrameLayout>

                <Button
                    android:id="@+id/fragment_second_reset_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="40dp"
                    android:text="@string/second_fragment_reset_button_text"
                    android:elevation="2dp"
                    android:visibility="invisible"
                    android:textColor="@color/white"
                    android:background="@drawable/circle_button_ripple"
                    />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</FrameLayout>