<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/third_fragment_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ThirdFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_user_colored"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/third_fragment_name_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/third_fragment_name_surname_text"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

                <ImageView
                    android:id="@+id/third_fragment_edit_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="30dp"/>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_white_corner_radius"
            android:layout_marginVertical="15dp"
            android:elevation="4dp"
            android:padding="20dp"
            android:weightSum="3"
            android:layout_marginHorizontal="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/bar_chart"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_fragment_meditation_num_text"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/statistics_icon_and_text_color"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/user_meditation_num_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_fragment_meditation_stat_initial_nums_text"
                    android:textColor="@color/statistics_text_color"
                    android:textSize="40sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/timer"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_fragment_meditation_minutes_text"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/statistics_icon_and_text_color"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/user_meditation_minutes_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_fragment_meditation_stat_initial_nums_text"
                    android:textColor="@color/statistics_text_color"
                    android:textSize="40sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/calendar"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_fragment_meditation_days_text"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/statistics_icon_and_text_color"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/user_meditation_day_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_fragment_meditation_stat_initial_nums_text"
                    android:textColor="@color/statistics_text_color"
                    android:textSize="40sp"
                    />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient_corner_radius"
                android:layout_marginHorizontal="20dp"
                android:elevation="2dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/night"
                        android:layout_gravity="center_vertical"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/third_fragment_dark_mode_text"
                        android:paddingStart="15dp"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:textColor="@color/white"
                        />

                    <Switch
                        android:id="@+id/third_fragment_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="10dp"
                    android:background="#67acef"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/language"
                        android:layout_gravity="center_vertical"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/third_fragment_language_change_text"
                        android:paddingStart="15dp"
                        android:gravity="center_vertical"
                        android:layout_weight="3"
                        android:textColor="@color/white"
                        />

                    <Spinner
                        android:id="@+id/third_fragment_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:spinnerMode="dropdown"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_drop_down_arrow"
                        />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</FrameLayout>